--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,22 +43,22 @@ table {
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
-  font-size: 18px;
-  margin-bottom: 15px;
-  font-family: 'Rubik', sans-serif;
+    font-size: 18px;
+    margin-bottom: 15px;
+    font-family: 'Rubik', sans-serif;
 }
 
 p {
-  line-height: 1.4;
+    line-height: 1.4;
 }
 
 .container {
@@ -80,12 +75,12 @@ p {
 
 header nav a {
   margin: 0 25px;
-  color: #000;
+  color: black;
   text-decoration: none;
 }
 
 a:hover {
-  color: #F00;
+  color: red;
 }
 
 .logo {
@@ -96,9 +91,8 @@ a:hover {
 .top-content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   margin-bottom: 20px;
-  border-bottom: 1px dashed #000;
+  border-bottom: 1px dashed black;
 }
 
 .top-image {
@@ -106,94 +100,67 @@ a:hover {
 }
 
 .top-content .text-container {
-  width: 48%;
+  width: 100%;
+  line-height: 1.6;
+  margin-bottom: 10px;
   padding: 0 1%;
-  padding-bottom: 20px;
 }
 
-.middle-content {
-	margin-bottom: 20px;
-	border-bottom: 1px dashed black;
-}
-
-.middle-content h2 {
-	padding: 0 2%;
-	margin-bottom: 0;
-}
-
-.middle-content .boxes {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-}
-
-.middle-content .boxes .box {
-  width: 12.5%;
-  height: 100px;
-  margin: 20px 2.5%;
-  color: white;
+.about-info {
+  min-height: 100%;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-bottom: 30px;
+  border-bottom: 1px dashed black;
+}
+
+.about-info > div {
+  display: flex;
+  flex-basis: calc(50% - 40px);
   justify-content: center;
+  flex-direction: column;
 }
 
-.box1 {
-  background-color: teal;
+.about-info > div > div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.box2 {
-  background-color: gold;
+.about-image {
+  margin: 15px;
 }
 
-.box3 {
-  background-color: cadetblue;
+.about-heading {
+  font-size: 20px;
+  text-align: left;
+  margin: 10px;
 }
 
-.box4 {
-  background-color: coral;
+.text-description {
+  line-height: 1.6;
+  height: 85px;
+  text-align: left;
+  margin-bottom: 5px;
 }
 
-.box5 {
-  background-color: crimson;
-}
-
-.box6 {
-  background-color: forestgreen;
-}
-
-.box7 {
-  background-color: darkorchid;
-}
-
-.box8 {
-  background-color: hotpink;
-}
-
-.box9 {
-  background-color: indigo;
-}
-
-.box10 {
-  background-color: dodgerblue;
+button {
+  width: 130px;
+  height: 35px;
+  margin: 10px;
+  border: 1px solid black;
 }
 
 .bottom-content {
   display: flex;
-  margin: 0 2% 20px;
-  justify-content: space-around;
-}
-
-.bottom-content .text-container {
-  padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-  padding-right: 0;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 footer {
   width: 100%;
-  background: #000;
+  background: black;
 }
 
 footer nav {
@@ -208,4 +175,8 @@ footer nav {
 footer nav a {
   color: white;
   text-decoration: none;
+}
+
+a:hover {
+  color: red;
 }
